<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/all_backgroun"
        android:fitsSystemWindows="true"
        tools:context=".screens.ActivitySignUp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:visibility="visible"
            android:src="@drawable/left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_16dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnRegister"
            android:layout_below="@id/imgBack"
            android:layout_marginBottom="@dimen/_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_30dp"
                    android:background="@drawable/edt_back_register"
                    android:inputType="text"
                    android:paddingStart="@dimen/_15dp"
                    android:textColor="@color/white"
                    android:textColorHint="#575769"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_30dp"
                    android:background="@drawable/edt_back_register"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_15dp"
                    android:textColor="@color/white"
                    android:textColorHint="#575769"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:id="@+id/edtNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_30dp"
                    android:background="@drawable/edt_back_register"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_15dp"
                    android:textColor="@color/white"
                    android:textColorHint="#575769"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginEnd="@dimen/_30dp"
                    android:background="@drawable/edt_back_register"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_15dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_50dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/button_background"
            android:text="@string/continuesignup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15dp" />
    </RelativeLayout>
</layout>
