<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_backgroun">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/devices"
            android:textColor="@color/white"
            android:textSize="@dimen/_16dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:src="@drawable/sun" />

        <LinearLayout
            android:id="@+id/ll_device_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@drawable/device_count_card_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/mg_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/total"
                    android:textColor="@color/hint_color">

                </TextView>

                <TextView
                    android:id="@+id/txt_total_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="5"
                    android:textColor="@color/white">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@drawable/device_count_card_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/mg_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/connected"
                    android:textColor="@color/hint_color">

                </TextView>

                <TextView
                    android:id="@+id/txt_connected_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="3"
                    android:textColor="@color/white">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@drawable/device_count_card_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/mg_5">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="Offline"
                    android:textColor="@color/hint_color">

                </TextView>

                <TextView
                    android:id="@+id/txt_offline_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="2"
                    android:textColor="@color/white">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_device_count"
            android:layout_marginTop="@dimen/_30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:textColor="@color/white">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_connected_devices"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginTop="@dimen/_10dp"
                    tools:itemCount="4"
                    tools:listitem="@layout/adapter_connected_devices" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/offline"
                    android:textColor="@color/white">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_offline_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/adapter_connected_devices" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>